--- a/index.html
+++ b/index.html
@@ -1,68 +1,159 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-    <title>Cuenta Regresiva</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Joss&Sebas</title>
+    <link rel="icon" href="corazon.png" type="image/png"> <!-- Ícono del corazón -->
     <style>
         body {
-            text-align: center;
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #ffcccc; /* Fondo rojo más bajo */
+            position: relative;
+            overflow: hidden;
         }
-
-        #countdown {
-            font-size: 36px;
-            font-weight: bold;
-            margin-top: 50px;
-            color: black;
+        .container {
+            text-align: center;
+            background-color: white; /* Fondo del contenedor blanco */
+            color: black; /* Texto negro */
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+            z-index: 1;
+            position: relative;
+        }
+        h1 {
+            font-size: 2em;
+            margin-bottom: 20px;
+        }
+        .subtitle {
+            font-size: 1.5em;
+            margin-bottom: 10px;
+        }
+        .countdown {
+            font-size: 2em;
+        }
+        .countdown div {
+            margin: 10px 0;
+        }
+        /* Estilos para los corazones */
+        .heart {
+            position: absolute;
+            width: 50px;
+            height: 50px;
+            background-color: red;
+            transform: rotate(-45deg);
+            top: 100%;
+            animation: float 6s infinite;
+            z-index: 0;
+        }
+        .heart::before,
+        .heart::after {
+            content: "";
+            position: absolute;
+            width: 50px;
+            height: 50px;
+            background-color: red;
+            border-radius: 50%;
+        }
+        .heart::before {
+            top: -25px;
+            left: 0;
+        }
+        .heart::after {
+            left: 25px;
+            top: 0;
+        }
+        /* Animación de los corazones flotantes */
+        @keyframes float {
+            0% {
+                transform: translateY(0) rotate(-45deg);
+                opacity: 1;
+            }
+            100% {
+                transform: translateY(-100vh) rotate(-45deg);
+                opacity: 0;
+            }
+        }
+        /* Estilos para el iframe del video */
+        .video-container {
+            display: none;
+            margin-top: 20px;
+        }
+        iframe {
+            width: 560px;
+            height: 315px;
         }
     </style>
 </head>
 <body>
-    <h1>¡Falta poco!</h1>
-    <p id="countdown"></p>
 
-    <script>
-        // Función para formatear el tiempo
-        function formatTime(time) {
-            const days = Math.floor(time / (1000 * 60 * 60 * 24));
-            const hours = Math.floor((time % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-            const minutes = Math.floor((time % (1000 * 60 * 60)) / (1000 * 60));
-            const seconds = Math.floor((time % (1000 * 60)) / 1000);
-            return `${days}d ${hours}h ${minutes}m ${seconds}s`;
+<!-- Corazones flotantes -->
+<div class="heart"></div>
+<div class="heart"></div>
+<div class="heart"></div>
+<div class="heart"></div>
+
+<div class="container" id="countdownContainer">
+    <div class="subtitle">Joss & Sebas</div> <!-- Texto agregado "Joss & Sebas" -->
+    <h1>Tú eres la historia más bonita que el destino escribió en mi vida</h1>
+    <div class="countdown">
+        <div id="minutos"></div>
+        <div id="segundos"></div>
+    </div>
+</div>
+
+<!-- Contenedor del video de YouTube -->
+<div class="video-container" id="videoContainer">
+    <iframe id="videoIframe" src="" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</div>
+
+<script>
+    // Obtener la hora actual
+    const ahora = new Date();
+
+    // Fecha límite es 25 minutos desde el momento actual
+    let fechaLimite = localStorage.getItem('fechaLimite');
+    if (!fechaLimite || new Date(fechaLimite) < ahora) {
+        fechaLimite = new Date(ahora.getTime() + 25 * 60 * 1000); // 25 minutos desde ahora
+        localStorage.setItem('fechaLimite', fechaLimite);
+    } else {
+        fechaLimite = new Date(fechaLimite);
+    }
+
+    // Actualizar la cuenta regresiva cada segundo
+    const intervalo = setInterval(() => {
+        const ahora = new Date().getTime();
+        const diferencia = fechaLimite.getTime() - ahora;
+
+        // Cálculo de minutos y segundos
+        const minutos = Math.floor((diferencia % (1000 * 60 * 60)) / (1000 * 60));
+        const segundos = Math.floor((diferencia % (1000 * 60)) / 1000);
+
+        // Mostrar el resultado en los respectivos elementos HTML
+        document.getElementById("minutos").innerHTML = minutos + " Minutos";
+        document.getElementById("segundos").innerHTML = segundos + " Segundos";
+
+        // Si la cuenta ha llegado a 0, detener el intervalo y mostrar el video
+        if (diferencia <= 0) {
+            clearInterval(intervalo);
+            document.getElementById("countdownContainer").style.display = "none"; // Ocultar la cuenta regresiva
+            document.getElementById("videoContainer").style.display = "block"; // Mostrar el video
+
+            // Reproducir el video automáticamente agregando 'autoplay=1'
+            const videoIframe = document.getElementById("videoIframe");
+            videoIframe.src = "https://www.youtube.com/embed/93puMDhX7xs?autoplay=1";
+
+            // Borrar la fecha límite de localStorage para que no se repita
+            localStorage.removeItem('fechaLimite');
         }
+    }, 1000);
+</script>
 
-        // Obtener el elemento del contador
-        const countdownElement = document.getElementById('countdown');
-
-        // Fecha de finalización (ajusta según tus necesidades)
-        const countDownDate = new Date("October 11, 2023 00:00:00").getTime();
-
-        // Obtener el tiempo restante del almacenamiento local o calcularlo
-        let remainingTime = localStorage.getItem('remainingTime');
-
-        // Función para actualizar el contador
-        function updateTimer() {
-            if (!remainingTime) {
-                remainingTime = countDownDate - new Date().getTime();
-                localStorage.setItem('remainingTime', remainingTime);
-            } else {
-                remainingTime -= 1000;
-                localStorage.setItem('remainingTime', remainingTime);
-            }
-
-            if (remainingTime <= 0) {
-                clearInterval(x);
-                countdownElement.textContent = "¡Ya llegó!";
-            } else {
-                countdownElement.textContent = formatTime(remainingTime);
-            }
-        }
-
-        // Iniciar el intervalo para actualizar el contador cada segundo
-        const x = setInterval(updateTimer, 1000);
-
-        // Iniciar la actualización inicial
-        updateTimer();
-    </script>
 </body>
 </html>
