--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
             border-radius: 5px;
             cursor: pointer;
             transition: background-color 0.3s;
+            text-decoration: none;
         }
         .button:hover {
             background-color: #ff3333;
@@ -114,12 +115,12 @@
 
     <!-- Contenedor del video de YouTube -->
     <div class="video-container">
-        <iframe src="https://youtube.com/shorts/JcmXwUXHzWA?si=ShP8uNWL3czPMWbZ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/Xau0gp3nF_A?autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
 </div>
 
-<!-- Botón "Para más besos" -->
-<button class="button">Para más besos</button>
+<!-- Botón "Para más besos" con enlace a WhatsApp -->
+<a href="https://wa.link/n6hygp" target="_blank" class="button">Para más besos</a>
 
 </body>
 </html>
