--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <!-- Contenedor del video de YouTube -->
     <div class="video-container">
-        <iframe src="https://www.youtube.com/embed/Xau0gp3nF_A?autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/shorts/JcmXwUXHzWA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
 </div>
 
