--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
     <!-- Contenedor del video de YouTube -->
     <div class="video-container">
-        <iframe src="https://www.youtube.com/embed/JcmXwUXHzWA?autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <iframe src="https://youtube.com/shorts/JcmXwUXHzWA?feature=share?autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
 </div>
 
